<resources>
    <string name="app_name">RGR</string>
    <string name="search">Search</string>
    <string name="no_repositories">No repositories</string>
    <string name="some_error_happened_upon_loading_the_list">some error happened upon loading the list</string>
    <string name="sime_repository_name">Some Repository Name</string>
    <string name="some_description_here">Some description here</string>
    <string name="launch_name">Launch name</string>
    <string name="launch_number">Launch number</string>
    <string name="mission_name_full">Mission name</string>
    <string name="launch_year_full">Launch year</string>
    <string name="rocket_name">Rocket name</string>
    <string name="rocket_type">Rocket type</string>
    <string name="launch_site">Launch site</string>
</resources>